--- a/package.json
+++ b/package.json
@@ -238,6 +238,12 @@
       "hash": "QmSwzyZ4zfHD9j4JZdXuzbWH4gXuDfZ7CdfMzpfqrMVcrz",
       "name": "go-libp2p-blankhost",
       "version": "0.1.12"
+    },
+    {
+      "author": "lgierth",
+      "hash": "QmawYkKaecYr6TyQm3xhxLpWhxQzK1UeUYortoCSFSZAd7",
+      "name": "go-multiaddr-dns",
+      "version": "0.1.3"
     }
   ],
   "gxVersion": "0.4.0",
